Fix profile btn dropdown not showing

--- a/src/Components/NavBar/ProfileBtn/ProfileBtn.scss
+++ b/src/Components/NavBar/ProfileBtn/ProfileBtn.scss
@@ -4,7 +4,6 @@
   display: flex;
   background-color: silver;
   border-radius: var(--navBar-btn-b-radius);
-  overflow: hidden;
   &__btn {
     width: var(--navBar-btn-size);
     height: var(--navBar-btn-size);
